src/test/ui/consts/const_unsafe_unreachable_ub.stderr
warning: any use of this value will cause an error
  --> $SRC_DIR/core/src/hint.rs:LL:COL
   |
LL |     unsafe { intrinsics::unreachable() }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              entering unreachable code
   |              inside `unreachable_unchecked` at $SRC_DIR/core/src/hint.rs:LL:COL
   |              inside `foo` at $DIR/const_unsafe_unreachable_ub.rs:9:18
   |              inside `BAR` at $DIR/const_unsafe_unreachable_ub.rs:14:28
   | 
  ::: $DIR/const_unsafe_unreachable_ub.rs:14:1
   |
LL | const BAR: bool = unsafe { foo(false) };
   | ----------------------------------------
   |
note: the lint level is defined here
  --> $DIR/const_unsafe_unreachable_ub.rs:13:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/const_unsafe_unreachable_ub.rs:17:14
   |
LL |   assert_eq!(BAR, true);
   |              ^^^ referenced constant has errors

error: erroneous constant used
  --> $DIR/const_unsafe_unreachable_ub.rs:17:3
   |
LL |   assert_eq!(BAR, true);
   |   ^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
